update gradle config for javafx usage